<resources>
    <string name="app_name">Blood Pressure Checker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="insight">Insight</string>
    <string name="scan">Scan</string>
    <string name="more">More</string>
    <string name="save">Save</string>
    <string name="pulse">Pulse</string>
    <string name="diastolic">Diastolic</string>
    <string name="systolic">Systolic</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="reminders">Reminders</string>
    <string name="reset_recorded_data">Reset Recorded Data</string>
    <string name="rate_us">Rate Us</string>
    <string name="more_apps">More Apps</string>
    <string name="share_with_friends">Share With Friends</string>
    <string name="help">Help</string>
    <string name="vibration">Vibration</string>
    <string name="hypotension">Hypotension</string>
    <string name="records">Records</string>
    <string name="trends">Trends</string>
    <string name="statistics">Statistics</string>
    <string name="total_readings">Total Readings:</string>
    <string name="metrics">Metrics</string>
    <string name="best">Best</string>
    <string name="worst">Worst</string>
    <string name="maximum">Maximum</string>
    <string name="mean">Mean</string>
    <string name="minimum">Minimum</string>
    <string name="exit_dialog_summary">Are you sure want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="delete_dialog_summary">Are you sure want to delete this entry?</string>
    <string name="delete">Delete</string>
    <string name="download_sensor">Download Sensor</string>
    <string name="ad">Ad</string>
    <string name="press_and_hold_to_delete_record">Press and hold to delete record</string>
    <string name="double_tap_or_pinch_to_zoom">Double Tap or Pinch to Zoom</string>
    <string name="past_record_trends">Past Record Trends</string>
    <string name="stageHypotension">Your blood pressure seems a bit low..if the situation continues,don\'t hesitate to consult your doctor.</string>
    <string name="stageNormal">Reset assured! Your blood pressure is in great condition, try to keep it!.</string>
    <string name="stageElevated">Your blood pressure is slightly above normal. We suggest you adopt a healthier lifestyle and measure your blood pressure regularly.</string>
    <string name="stageHypertensionStageOne">If you\'ve got 3 or more readings in this area, it\'s time to ask your doctor for prescriptions regarding lifestyle improvements.</string>
    <string name="stageHypertensionStageTwo">If you\'ve got 3 or more readings in this area, take care of your body through medical treatment and lifestyle changes.</string>
    <string name="stageHypertensive">We\'re worried about you. Please call for emergency medical service immediately!.</string>
    <string name="welcome_summary">Blood Pressure Tracker allows you to track your blood pressure, which aids you in keep track of and control your blood pressure everyday.\n\nConsult your doctor or use a blood pressure monitor device to determine blood pressure and enter reading in home page.\n\nThis app provides you insights whether you need to take some steps to improve your numbers or not, you can see charts which show trends and statistics to check your median, max and min trends. You can also view past records in Insight Tab.</string>
    <string name="disclaimer">Disclaimer:</string>
    <string name="disclaimer_summary">This is not a medical device, the application only records and monitors your daily blood pressure values and the scan button calculates average BP based on the information entered by the user in the history log. You should use blood pressure monitor to meassure your blood pressure.</string>
    <string name="welcome">Welcome</string>
    <string name="okay">Okay</string>
    <string name="exittext">Exit</string>
    <string name="feedback">Feedback</string>
    <string name="rateus">Rate us</string>
    <string name="exit_description">Are you sure you want to exit?</string>
    <string name="rate_description">Your Good Rating Inspire us to serve\n you Better Services"</string>
    <string name="messageNotification">Time to check your blood pressure. Tap to check and record your blood pressure</string>
</resources>